# cesium-project

./: .gitignore  package-lock.json  package.json
server/: CMakeLists.txt  README.md
server/examples/: README_ZEROMQ.md  grpc_client_example.cpp  redis_examples.cpp  zeromq_examples.cpp
server/include/: cesium_server_app.h  cesium_service.h  grpc_server.h-  http_server.h  logger.h  thread_pool.h  udp_multicast_server.h  websocket_server.h  zeromq_server.h
server/include/auth/: AuthService.h  User.h
server/include/database/: DatabaseFactory.h  DatabasePool.h  IDatabase.h  MySQLDatabase.h  RedisPool.h  SQLiteDatabase.h
server/protos/: cesium_service.proto
server/simulator/: websocket_server.js
server/sql/: create_users_table.sql
server/src/: cesium_server_app.cpp  cesium_service.cpp  grpc_server.cpp  http_server.cpp  main.cpp  udp_multicast_server.cpp  websocket_server.cpp  zeromq_server.cpp
server/src/auth/: AuthService.cpp
server/src/database/: DatabaseFactory.cpp  DatabasePool.cpp  MySQLDatabase.cpp  RedisPool.cpp  SQLiteDatabase.cpp
server/tests/: CMakeLists.txt  test_grpc_service.cpp  test_server.cpp
src/: App.vue  index.html
src/components/: Entity.vue  Map.vue  MapSourceSelector.vue  MenuBar.vue  ScaleBar.vue  StatusBar.vue  ToolBar.vue
src/config/: imageryConfig.ts
src/utils/: mapTools.ts  measure.ts  websocket.ts
